[gd_scene load_steps=4 format=1]

[ext_resource path="res://widget_grid/widget_grid_gui.gd" type="Script" id=1]
[ext_resource path="res://widget_grid/graphics/grid.png" type="Texture" id=2]
[ext_resource path="res://widget_grid/widget_grid_control.tscn" type="PackedScene" id=3]

[node name="gui" type="ColorFrame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
color = Color( 0.660156, 0.660156, 0.660156, 1 )
script/script = ExtResource( 1 )

[node name="grid_area" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 0.0
margin/bottom = 0.0

[node name="scroller" type="Control" parent="grid_area"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 80.0

[node name="background" type="TextureFrame" parent="grid_area/scroller"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="grid" parent="grid_area/scroller" instance=ExtResource( 3 )]

rect/min_size = Vector2( 0, 0 )
margin/right = 199.0
margin/bottom = 320.0

[node name="scroll_bar_h" type="HScrollBar" parent="grid_area"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 40.0
margin/bottom = 0.0
range/min = 0.0
range/max = 200.0
range/step = 0.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
custom_step = -1.0

[node name="scroll_bar_v" type="VScrollBar" parent="grid_area"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 40.0
range/min = 0.0
range/max = 320.0
range/step = 0.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
custom_step = -1.0

[node name="corner_rect" type="ColorFrame" parent="grid_area"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 40.0
margin/right = 0.0
margin/bottom = 0.0
color = Color( 0.296875, 0.296875, 0.296875, 1 )

[node name="add_widget_button" type="MenuButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 109.0
margin/bottom = 40.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Add Widget"
flat = true
items = [  ]

[node name="reshape_widgets_button" type="CheckButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 113.0
margin/top = 8.0
margin/right = 189.0
margin/bottom = 30.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0


